# groundcover-go

./: .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  attributes.go  attributes_test.go  bench_test.go  capture_extra_test.go  client.go  client_global.go  client_test.go  config.go  debug.go  delivery_test.go  doc.go  errors.go  event.go  example_test.go  fingerprint.go  global_test.go  go.mod  groundcover.go  groundcover_test.go  hasher.go  level.go  logger.go  logger_test.go  resource.go  review_fixes_test.go  scope.go  scope_test.go  stacktrace.go  stats.go  timeout_test.go  title.go  title_test.go  (+6 more)
.github/: CODEOWNERS  dependabot.yml
docs/: llm-instrumentation-guide.md
examples/: README.md  go.mod  go.sum
groundcover-python/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
groundcover-python/.github/workflows/: ci.yml
groundcover-python/docs/: llm-instrumentation-guide.md
groundcover-python/examples/: basic.py  before_send.py  wsgi_app.py
groundcover-python/scripts/: check-commit-authors.sh
groundcover-python/src/groundcover/: __init__.py  _attributes.py  _client.py  _client_global.py  _config.py  _debug.py  _errors.py  _event.py  _fingerprint.py  _hasher.py  _level.py  _logger.py  _resource.py  _scope.py  _stacktrace.py  _stats.py  _title.py  _user.py  _uuid.py  _version.py  _wire.py  asgi.py  prometheus.py  wsgi.py
groundcover-python/src/groundcover/_internal/: __init__.py  logthrottle.py  ringbuf.py  safeguard.py  selfmetrics.py  transport.py
groundcover-python/tests/: __init__.py  conftest.py  test_client.py  test_global.py  test_internal.py  test_middleware.py  test_prometheus.py  test_review_fixes.py  test_scope.py  test_title.py  test_transport.py  test_units.py  test_wire.py
nethttp/: integration_test.go  middleware.go  middleware_test.go
prometheus/: go.mod  go.sum  prometheus.go  prometheus_test.go
scripts/: check-commit-authors.sh
(+72 files in other folders)
