[project]
name = "groundcover"
version = "0.1.0"
description = "The official groundcover error tracking SDK for Python."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "groundcover" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["groundcover", "error-tracking", "observability", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://groundcover.com"
Repository = "https://github.com/groundcover-com/groundcover-python"

[project.optional-dependencies]
# The core SDK is stdlib-only; optional integrations declare their own deps.
prometheus = ["prometheus-client>=0.16"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groundcover"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    # The floor is Python 3.9: keep typing.Optional/Union/List spellings
    # instead of PEP 604/585 syntax.
    "UP006",
    "UP007",
    "UP035",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and access private seams.
"tests/*" = ["B011"]
